[tool.poetry]
name = "pyprompt"
version = "0.3.5"
description = "Validation for LLM prompts."
authors = [
  "Andrew Hamilton <andrewh@buildwithlayer.com>",
  "Gavyn Partlow <gavynp@buildwithlayer.com>",
]
license = "MIT"
readme = "README.md"
packages = [{include = "pyprompt", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"
tiktoken = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
